@@ -1,27 +1,23 @@
-package hu.nemaberci.generator.generator;
+package hu.nemaberci.generator.generator.cpp;
 
-import static hu.nemaberci.generator.annotationprocessor.RegularExpressionAnnotationProcessor.GENERATED_FILE_PACKAGE;
-import static hu.nemaberci.generator.generator.IndividualStateHandlerGenerator.createIndividualStateHandler;
-import static hu.nemaberci.generator.generator.ParserFileGenerator.createMainParserFile;
-import static hu.nemaberci.generator.generator.StateTransitionHandlerGenerator.createStateTransitionHandlerUtil;
-import static hu.nemaberci.generator.generator.StatesHandlerGenerator.createFileForStates;
 import static hu.nemaberci.generator.regex.dfa.util.DFAUtils.extractAllNodes;
 
 import hu.nemaberci.generator.regex.data.RegexFlag;
 import hu.nemaberci.generator.regex.dfa.data.DFANode;
 import hu.nemaberci.generator.regex.dfa.minimizer.DFAMinimizer;
+import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
-import javax.annotation.processing.Filer;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.CharUtils;
 
 @Slf4j
-public class CodeGeneratorOrchestrator {
+public class CppCodeGeneratorOrchestrator {
 
     public static final String CURR_CHAR = "currentCharacter";
     public static final String CHARS = "characters";
@@ -33,7 +29,7 @@ public class CodeGeneratorOrchestrator {
     public static final String LAST_SUCCESSFUL_MATCH_AT = "lastSuccessfulMatchAt";
     public static final String CURR_STATE_HANDLER = "currentStateHandler";
     public static final String INPUT_STRING_LENGTH = "stringLength";
-    public static final int IMPOSSIBLE_STATE_ID = -1;
+    public static final int IMPOSSIBLE_STATE_ID = - 1;
     public static final int STATES_PER_FILE_LOG_2 = 4;
 
     private static void calculateDistanceFromStartAndAddParents(DFANode startNode) {
@@ -41,12 +37,12 @@ public class CodeGeneratorOrchestrator {
         List<DFANode> queue = new ArrayList<>();
         queue.add(startNode);
 
-        while (!queue.isEmpty()) {
+        while (! queue.isEmpty()) {
             var curr = queue.get(0);
             queue.remove(0);
             curr.getTransitions().values().stream().filter(Objects::nonNull).forEach(
                 node -> {
-                    if (!node.getParents().contains(curr)) {
+                    if (! node.getParents().contains(curr)) {
                         node.getParents().add(curr);
                         if (node.getDistanceFromStart() < curr.getDistanceFromStart()) {
                             node.setDistanceFromStart(curr.getDistanceFromStart() + 1);
@@ -57,7 +53,7 @@ public class CodeGeneratorOrchestrator {
             );
             if (curr.getDefaultTransition() != null) {
                 var node = curr.getDefaultTransition();
-                if (!node.getParents().contains(curr)) {
+                if (! node.getParents().contains(curr)) {
                     node.getParents().add(curr);
                     if (node.getDistanceFromStart() < curr.getDistanceFromStart()) {
                         node.setDistanceFromStart(curr.getDistanceFromStart() + 1);
@@ -78,13 +74,13 @@ public class CodeGeneratorOrchestrator {
                 char otherCaseChar = Character.isUpperCase(c) ?
                     Character.toLowerCase(c) :
                     Character.toUpperCase(c);
-                if (!node.getTransitions().containsKey(otherCaseChar)) {
+                if (! node.getTransitions().containsKey(otherCaseChar)) {
                     node.getTransitions().put(
                         otherCaseChar,
                         node.getTransitions().get(c)
                     );
                 }
-            };
+            }
         }
 
     }
@@ -113,7 +109,7 @@ public class CodeGeneratorOrchestrator {
         return "resultFound";
     }
 
-    public String generateParser(String className, String regex, Filer filer) {
+    public String generateParser(String className, String regex, String folderName) {
 
         try {
 
@@ -124,14 +120,29 @@ public class CodeGeneratorOrchestrator {
             }
 
             var allNodes = extractAllNodes(parseResult.getStartingNode()).stream()
-                .sorted(Comparator.comparingInt(DFANode::getId)).collect(Collectors.toList());
+                .sorted(Comparator.comparingInt(DFANode::getId))
+                .toList();
             final List<List<DFANode>> splitNodes = getSplitNodes(allNodes);
+
+            if (! new File(folderName).exists()) {
+                if (!new File(folderName).mkdirs()) {
+                    log.error("Could not create directory");
+                    return null;
+                }
+            }
+
+            final var folderPrefix = folderName + "/";
+            final var fileSuffix = ".cpp";
 
             for (int i = 0; i < splitNodes.size(); i++) {
                 final var partClassName = stateHandlerPartName(className, i);
-                try (var writer = filer.createSourceFile(
-                    GENERATED_FILE_PACKAGE + "." + partClassName).openWriter()) {
-                    createFileForStates(
+                try (
+                    var writer = Files.newBufferedWriter(
+                        new File(folderPrefix + partClassName + fileSuffix)
+                            .toPath()
+                    )
+                ) {
+                    CppStatesHandlerGenerator.createFileForStates(
                         partClassName,
                         className,
                         writer,
@@ -146,10 +157,14 @@ public class CodeGeneratorOrchestrator {
 
             for (int i = 0; i < allNodes.size(); i++) {
                 var name = individualStateHandlerName(className, i);
-                try (var writer = filer.createSourceFile(GENERATED_FILE_PACKAGE + "." + name)
-                    .openWriter()) {
-                    createIndividualStateHandler(
+                try (
+                    var writer = Files.newBufferedWriter(
+                        new File(folderPrefix + name + fileSuffix).toPath()
+                    )
+                ) {
+                    CppIndividualStateHandlerGenerator.createIndividualStateHandler(
                         allNodes.get(i),
+                        parseResult.getStartingNode(),
                         parseResult.getFlags(),
                         name,
                         className,
@@ -158,21 +173,12 @@ public class CodeGeneratorOrchestrator {
                 }
             }
 
-            try (var writer = filer.createSourceFile(
-                GENERATED_FILE_PACKAGE + "." + utilName(className)).openWriter()) {
-                createStateTransitionHandlerUtil(
-                    allNodes.size(),
-                    writer,
-                    parseResult.getStartingNode(),
-                    parseResult.getFlags(),
-                    utilName(className),
-                    className
-                );
-            }
-
-            try (var writer = filer.createSourceFile(
-                GENERATED_FILE_PACKAGE + "." + className).openWriter()) {
-                createMainParserFile(
+            try (
+                var writer = Files.newBufferedWriter(
+                    new File(folderPrefix + className + fileSuffix).toPath()
+                )
+            ) {
+                CppParserFileGenerator.createMainParserFile(
                     allNodes,
                     parseResult.getStartingNode(),
                     parseResult.getFlags(),
@@ -204,7 +210,7 @@ public class CodeGeneratorOrchestrator {
                 count = 0;
             }
         }
-        if (!splitNodes.contains(temp)) {
+        if (! splitNodes.contains(temp)) {
             splitNodes.add(temp);
         }
         return splitNodes;
